# CPP-Webserver

./: CMakeLists.txt  CartManager.cpp  CartManager.h  InventoryManager.h  LICENSE.txt  Products.json  README.md  main.cpp
include/: AuthManager.h  CartManager.h  InventoryManager.h
public/: cart.html  checkout.html  index.html  sneaker.html
public/scripts/: shared.js
public/styles/: cart.css  checkout.css  index.css  sneaker.css
src/: AuthManager.cpp  CartManager.cpp  InventoryManager.cpp  main.cpp
